[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = "A Playground for Python code"
authors = ["cesarmg1980 <cesar.m.giulietti@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
ipdb = "^0.13.13"
black = "^25.1.0"
flake8 = "^7.1.2"
mypy = "^1.15.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
